...
              ),
            ),
          ),
          TextButton(
            onPressed: () => Navigator.of(ctx).pop(true),
            child: const Text(
              'Keluar',
              style: TextStyle(
                color: AppColors.danger600,
                fontWeight: FontWeight.w700,
              ),
            ),
          ),
...
